--- a/src/Pages/Main.css
+++ b/src/Pages/Main.css
@@ -8,7 +8,7 @@
   /*height: auto;*/
   min-height: 100vh;
 
-  background-image:url('../public/wave.png') ;
+  background-image:url('../../public/wave.png') ;
   background-repeat: no-repeat;
   background-size: cover;
   color:steelblue;
